<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
           android:checkableBehavior="single">
        <item
            android:id="@+id/nav_about_phone"
            android:icon="@drawable/ic_about_phone"
            android:title="@string/about_phone" />

        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_tool"
            android:title="@string/common_tool" />

        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_monkey"
            android:title="@string/monkey" />

        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_performs"
            android:title="@string/performs_test" />

    </group>

    <item android:title="辅助功能">
        <menu>
            <item
                android:id="@+id/nav_catchLog"
                android:icon="@drawable/ic_catch_log"
                android:title="@string/MTK_logcat" />

            <item
                android:id="@+id/nav_catchTrace"
                android:icon="@drawable/ic_up"
                android:title="@string/print_trace" />

            <item
                android:id="@+id/nav_update"
                android:icon="@drawable/ic_upload"
                android:title="@string/check_update" />

            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_setting"
                android:title="@string/setting" />
        </menu>
    </item>

</menu>
