<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_clear_video"
        android:orderInCategory="100"
        android:title="@string/action_clear_video"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_clear_music"
        android:orderInCategory="100"
        android:title="@string/action_clear_music"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_clear_ebook"
        android:orderInCategory="100"
        android:title="@string/action_clear_ebook"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_clear_gallery"
        android:orderInCategory="100"
        android:title="@string/action_clear_gallery"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_clear_reader"
        android:orderInCategory="100"
        android:title="@string/action_clear_reader"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_clear_compaign"
        android:orderInCategory="100"
        android:title="@string/action_clear_compaign"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_clear_cloud"
        android:orderInCategory="100"
        android:title="@string/action_clear_cloud"
        app:showAsAction="never" />

</menu>
