<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:title="@string/setting_category_performs"
        android:selectable="false">

        <com.meizu.common.preference.SwitchPreference
            android:key="preference_wakeup"
            android:defaultValue="false"
            android:title="@string/setting_wakeup"
            android:summary="作为性能测试的机器时，需要开启"/>
    </PreferenceCategory>



    <PreferenceCategory
        android:title="@string/setting_category_wifi"
        android:selectable="false">

        <com.meizu.common.preference.SwitchPreference
            android:key="preference_lock_wifi"
            android:defaultValue="false"
            android:title="@string/setting_lock_wifi"
            android:summary="选择锁定的WiFi或自定义"/>

        <com.meizu.common.preference.ListPreference
            android:key="preference_lock_wifi_type"
            android:defaultValue="MZ-Inweb-Test"
            android:title="锁定目标"
            android:entries="@array/ssid"
            android:entryValues="@array/ssid"
            android:dialogTitle="请选择锁定类型" />

        <EditTextPreference
            android:key="preference_defined_wifi_ssid"
            android:title="ssid"
            android:defaultValue="MZ-Inweb-Test"/>

        <EditTextPreference
            android:key="preference_defined_wifi_psw"
            android:inputType="textPassword"
            android:title="password"
            android:defaultValue="Inweb@meizu.com"/>

    </PreferenceCategory>


    <PreferenceCategory
        android:title="@string/setting_category_voice"
        android:selectable="false">

        <com.meizu.common.preference.SwitchPreference
            android:key="preference_mute"
            android:defaultValue="true"
            android:title="@string/setting_no_voice" />

        <CheckBoxPreference
            android:key="preference_mute_run_task"
            android:title="仅在执行任务时静音"
            android:defaultValue="true"
            android:summary="勾选则仅在执行任务时静音">
        </CheckBoxPreference>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/setting_category_monkey"
        android:selectable="false">

        <Preference
            android:key="preference_app_type"
            android:title="@string/setting_app_type"
            android:summary="未选择业务">
        </Preference>

        <CheckBoxPreference
            android:key="preference_clear_log"
            android:title="跑前清除日志"
            android:defaultValue="true"
            android:summary="自动清除本地MTK/LogReport抓取的日志">
        </CheckBoxPreference>

        <CheckBoxPreference
            android:key="preference_catch_log_type"
            android:title="只抓取Main Log"
            android:defaultValue="true">
        </CheckBoxPreference>

        <EditTextPreference
            android:key="preference_single_log_size"
            android:title="日志最大值(MB)"
            android:defaultValue="4096">
        </EditTextPreference>

        <EditTextPreference
            android:key="preference_all_log_size"
            android:title="总日志容量最大值(MB)"
            android:defaultValue="10000">
        </EditTextPreference>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/setting_category_base"
        android:selectable="false">

        <com.meizu.common.preference.SwitchPreference
            android:key="preference_if_close_notification"
            android:defaultValue="false"
            android:title="@string/setting_if_exits_notification"
            android:summary="取消勾选后存在应用掉线的风险" />

        <com.meizu.common.preference.SwitchPreference
            android:key="preference_if_clear_app_update"
            android:defaultValue="false"
            android:title="@string/setting_if_clear_app_update"
            android:summary="勾选后则在每次更新APK后自动删除包"/>

        <EditTextPreference
            android:key="preference_clear_cache"
            android:title="清除应用缓存周期/天"
            android:inputType="number"
            android:defaultValue="@string/clear_cache_orign_times">
        </EditTextPreference>

    </PreferenceCategory>

</PreferenceScreen>