<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#99000000">

    <com.meizu.common.widget.LoadingView
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#66000000">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:textSize="20sp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/performs_u2_task"
                android:gravity="center"/>

            <ImageView
                android:id="@+id/btn_close_menu"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="@dimen/button_margin"
                android:src="@drawable/ic_close"
                android:layout_gravity="end"
                android:clickable="true"
                android:background="?android:attr/selectableItemBackground"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/button_margin"
            android:layout_marginRight="@dimen/button_margin">

                <RadioGroup
                    android:id="@+id/type_choose"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/type_choose_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/all"
                        android:textSize="11sp"
                        android:checked="true"/>

                    <RadioButton
                        android:id="@+id/type_choose_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/framerate"
                        android:textSize="11sp"/>

                    <RadioButton
                        android:id="@+id/type_choose_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/memory"
                        android:textSize="11sp"/>

                    <RadioButton
                        android:id="@+id/type_choose_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/starttime"
                        android:textSize="11sp"/>

                    <RadioButton
                        android:id="@+id/type_choose_5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/purebackstage"
                        android:textSize="11sp"/>

                </RadioGroup>

        </LinearLayout>



        <ListView
            android:id="@+id/case_list_view"
            android:layout_width="280dp"
            android:layout_height="400dp"
            android:layout_marginTop="@dimen/button_margin"
            android:layout_marginStart="@dimen/button_margin"
            android:layout_marginEnd="@dimen/button_margin"
            android:layout_gravity="center_horizontal">

        </ListView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="horizontal"
            android:gravity="right">

            <Button
                android:id="@+id/clear_all_case"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:paddingStart="@dimen/image_margin2"
                android:paddingEnd="@dimen/image_margin2"
                android:background="@drawable/download_button"
                android:fontFamily="sans-serif-medium"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:textSize="12sp"
                android:text="@string/action_clear_all"/>

            <Button
                android:id="@+id/btn_run_testcase"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:paddingStart="@dimen/image_margin2"
                android:paddingEnd="@dimen/image_margin2"
                android:background="@drawable/download_button"
                android:fontFamily="sans-serif-medium"
                android:textSize="12sp"
                android:text="@string/action_run_testcase"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/no_testcase_choose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textSize="15sp"
        android:text="@string/performs_no_testcase" />

</RelativeLayout>