<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.meizu.testdevVideo.fragment.SingleMonkeyFragment">

    <LinearLayout
        android:id="@+id/layout_single_monkey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical"
        android:background="@drawable/boder">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal"
            android:layout_weight="3">

            <Spinner
                android:id="@+id/spinner_packet_choose"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="2.5">
            </Spinner>

            <EditText
                android:id="@+id/edit_monkey_defined"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:hint="@string/action_input_packet"
                android:textSize="15dp"
                android:layout_weight="0.5"/>

        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/single_monkey_text"
            android:gravity="left"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            android:textColor="#000000"
            android:textSize="15dp"
            android:ellipsize="end" />

        <Button
            android:id="@+id/button_copy_single_monkey"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/my_button_purple"
            android:textColor="#FFFFFF"
            android:textSize="15dp"
            android:text="@string/action_copy_monkey" />

        <Button
            android:id="@+id/button_single_monkey"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:background="@drawable/my_button_purple"
            android:textColor="#FFFFFF"
            android:gravity="center"
            android:textSize="15dp"
            android:text="@string/action_run_monkey" />

    </LinearLayout>

</LinearLayout>
