<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <com.meizu.common.widget.LoadingAnimotionView
        android:id="@+id/loadingView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/mProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <com.meizu.common.widget.LoadingAnimotionView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/view_height"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/email_adress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:paddingStart="15dp"
            android:paddingEnd="10dp"
            android:inputType="textEmailAddress"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <SearchView
                android:id="@+id/editTextApp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:iconifiedByDefault="false"
                android:layout_marginEnd="10dp"
                android:queryHint="@string/app_search_hint"
                android:layout_gravity="center"
                android:ems="10" >

            </SearchView>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ListView
                android:id="@+id/listviewApp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/button_tab">
            </ListView>

            <LinearLayout
                android:id="@+id/button_tab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="end"
                android:padding="10dp"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:id="@+id/choose_item_remind"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/white"/>

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="50dp"
                    android:layout_height="25dp"
                    android:text="@string/btn_cancel"/>

                <Button
                    android:id="@+id/btn_ok"
                    android:layout_width="50dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/btn_ok"/>

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>



</RelativeLayout>